# ProyectoPronosticosUFC

./: .gitignore  INSTRUCTIONS.md  README.md  docker-compose.yml  product-backlog-pronostats.md
backend/: .env  .env.docker.example  .env.example  Dockerfile  alembic.ini  pronostats_dev.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260708_0001_crear_tabla_usuarios.py  20260709_0002_crear_dominio_mvp.py  20260710_0003_corregir_peleadores_y_tablas_faltantes.py  20260710_0004_agregar_hora_evento.py  20260710_0005_cuotas_prediccion_ver_pronostico.py  9c18ebd8ef5f_agregar_clerk_id_a_usuarios.py  README.md
backend/app/: __init__.py  api.py  main.py
backend/app/admin/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/apuestas/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/auth/: __init__.py  bootstrap.py  dependencias.py  models.py  router.py  schemas.py  service.py  webhook.py
backend/app/billetera/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  base_de_datos.py  configuracion.py  correo.py  dependencias.py  modelos.py  seguridad.py
backend/codigos_desarrollo/: borismacias146_at_gmail_com.txt  test_user_flow_at_example_com.txt
backend/datasets/: fighter_dataset_enriched.csv  fights.csv
backend/ml/: odds.py  predictor.py
backend/scratch/: check_db.py  exportar_usuarios_clerk.py  repopulate_db.py  test_db_conn.py  test_password_formats.py  test_real_smtp.py
backend/tests/: test_auth_email.py  test_billetera_limite.py  test_health.py
(+105 files in other folders)
