[project]
name = "pronostats-ufc-backend"
version = "0.1.0"
description = "Backend del MVP PronoStats UFC"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "sqlalchemy>=2.0.43,<2.1.0",
    "alembic>=1.16.4,<1.17.0",
    "pandas>=2.3.0,<3.0.0",
    "psycopg[binary]>=3.2.9,<3.3.0",
    "pydantic-settings>=2.10.1,<2.11.0",
    "pyjwt>=2.10.1,<2.11.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "bcrypt>=4.1.3,<5.0.0",
    "httpx>=0.28.1,<0.29.0",
    "stripe>=12.4.0,<12.5.0",
    "email-validator>=2.2.0,<2.3.0",
    "python-dotenv>=1.1.1,<1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<8.5.0",
    "pytest-asyncio>=1.1.0,<1.2.0",
    "pytest-cov>=6.2.1,<6.3.0",
    "ruff>=0.12.3,<0.13.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
